# LLMOPS

./: .dockerignore  .env.example  .gitignore  Azure.excalidraw  DOCKERFILE_CHANGES.md  Dockerfile.jenkins  Dockerfile.optimized  Jenkinsfile  PRODUCTION_SESSION_MANAGEMENT.md  PROJECT_ARCHITECTURE_DOCUMENTATION.md  README.md  SESSION_COMPARISON.md  TESTING_GUIDE.md  comands.md  definitions_concepts.txt  flow.excalidraw  jenkinks.excalidraw  main.py  pyproject.toml  requirements.txt  test_production.py
.github/workflows/: aws.yml  build-and-push-to-acr.yml  ci.yml  task_defination.json
AWSCloudServiceDocs/: .gitignore.recommended  AWS_DEPLOYMENT_GUIDE.md  AWS_INTERVIEW_GUIDE.md  flow.excalidraw
AureCloudDocs/: AZURE_DEPLOYMENT_GUIDE.md  AZURE_INTERVIEW_GUIDE.md
multi_doc_chat/config/: config.yaml
multi_doc_chat/model/: models.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  evaluations.ipynb  experiments.ipynb
scripts/azure/: azure-deploy-jenkins.sh  build-and-push-docker-image.sh  setup-app-infrastructure.sh
static/: styles.css
templates/: index.html
tests/: conftest.py
tests/integration/: test_chat_route.py
